--- a/plantilla_arboles.html
+++ b/plantilla_arboles.html
@@ -10,7 +10,7 @@
 .card { cursor:pointer; border-radius:10px; padding:10px; width:90%; max-width:280px; text-align:center; box-shadow:0 2px 5px rgba(0,0,0,0.15); transition:0.2s; background:white; }
 .card:hover { transform:translateY(-4px); box-shadow:0 4px 10px rgba(0,0,0,0.25); }
 .popup-overlay { position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.5); display:none; justify-content:center; align-items:center; z-index:1000; }
-.popup-content { background:white; border-radius:12px; padding:20px; width:80%; max-width:650px; max-height:80%; overflow-y:auto; box-shadow:0 4px 12px rgba(0,0,0,0.3); position:relative; }
+.popup-content { background:white; border-radius:12px; padding:20px; width:85%; max-width:900px; max-height:80%; overflow-y:auto; box-shadow:0 4px 12px rgba(0,0,0,0.3); position:relative; }
 .popup-content img { border-radius:10px; margin-bottom:10px; }
 .popup-content pre { background:#f8f8f8; padding:10px; border-radius:8px; white-space:pre-wrap; }
 .popup-close { position:absolute; top:8px; right:12px; cursor:pointer; font-weight:bold; font-size:20px; color:#333; }
@@ -22,7 +22,7 @@ button#toggleCoParents { margin:10px; padding:5px 10px; }
 </head>
 <body>
 <h1>Famous Relatives</h1>
-<h2>En rosa se encuentran los parentescos políticos y en rojo los de mi cónyuge*</h2>
+<h2>*En rosa se encuentran los parentescos políticos y en "rojo" parentescos de mi cónyuge*</h2>
 
 <button id="toggleCoParents">- Ocultar parentescos de mi cónyuge</button>
 
