--- a/plantilla_arboles.html
+++ b/plantilla_arboles.html
@@ -8,7 +8,7 @@
 <style>
 body {
   font-family: "Open Sans", sans-serif;
-  background-color: #f8f9fa;
+  background-color: #ececec;
   color: #222;
   margin: 0;
   padding: 0;
@@ -107,16 +107,21 @@ h1, h2 {
 
 /* Botones */
 #toggleCoParents {
-  background: #007bff;
-  color: white;
+  background-color: #f3f7fe;
+  color: #3b82f6;
   border: none;
-  padding: 6px 12px;
-  border-radius: 6px;
   cursor: pointer;
+  border-radius: 8px;
+  width: 300px;
+  height: 45px;
+  transition: 0.3s;
+  padding: 6px 12px;
   font-family: "Poppins", sans-serif;
 }
 #toggleCoParents:hover {
-  background: #0056b3;
+  background-color: #3b82f6;
+  box-shadow: 0 0 0 5px #3b83f65f;
+  color: #fff;
 }
 .popup-close {
   position: absolute;
@@ -158,7 +163,7 @@ h1, h2 {
 </head>
 <body>
 <h1>Famous Relatives</h1>
-<h2>*En rosa se encuentran los parentescos políticos y en "rojo" parentescos de mi cónyuge*</h2>
+<h2>*En rosado claro se encuentran los parentescos políticos y en rosado oscuro parentescos de mi cónyuge*</h2>
 
 <button id="toggleCoParents">- Ocultar parentescos de mi cónyuge</button>
 
